--- a/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/UserManagement/Create.cshtml
+++ b/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/UserManagement/Create.cshtml
@@ -1,10 +1,17 @@
 ﻿@using Mindbite.Mox.Extensions
-@using Microsoft.Extensions.Localization;
+@using Microsoft.Extensions.Localization
+@using Microsoft.EntityFrameworkCore
+
+@inject IStringLocalizer localizer
+@inject Mindbite.Mox.Identity.Services.RoleGroupManager roleGroupManager
+
+@model Mindbite.Mox.Identity.ViewModels.CreateUserViewModel
 @{
     Layout = "Mox/_Layout";
+
+    var roleGroups = await roleGroupManager.RoleGroups.OrderBy(x => x.GroupName).ToListAsync();
+    var roleGroupSelectList = roleGroups.Select(x => new SelectListItem(x.GroupName, x.Id.ToString()));
 }
-@model Mindbite.Mox.Identity.ViewModels.CreateUserViewModel
-@inject IStringLocalizer localizer
 
 @await Html.PartialAsync("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = true }.ToExpando())
 
@@ -26,25 +33,14 @@
             @Html.ValidationMessageFor(model => model.Email)
             @Html.TextBoxFor(model => model.Email)
         </p>
+
+        <p>
+            @Html.LabelFor(model => model.RoleGroupId)
+            @Html.ValidationMessageFor(model => model.RoleGroupId)
+            @Html.DropDownListFor(model => model.RoleGroupId, roleGroupSelectList, localizer["- Välj behörighetsgrupp -"])
+        </p>
     </fieldset>
 
-    <fieldset>
-        <legend>@localizer["Behörigheter"]</legend>
-
-        <ul class="checkbox" id="js-groups">
-            @for (var i = 0; i < Model.Roles.Length; i++)
-            {
-                <li class="mox-group-depth-@Model.Roles[i].Depth @(Model.Roles[i].IsParent ? "mox-group-parent" : "")">
-                    @Html.HiddenFor(model => model.Roles[i].Id)
-                    @Html.HiddenFor(model => model.Roles[i].Name)
-                    @Html.HiddenFor(model => model.Roles[i].Depth)
-                    @Html.HiddenFor(model => model.Roles[i].IsParent)
-                    @Html.CheckBoxFor(model => model.Roles[i].Checked, new { onclick = $"Mox.UI.CheckboxTree.onClick(document.getElementById('js-groups'), this, '{Model.Roles[i].Id}');", data_id = Model.Roles[i].Id })
-                    @Html.LabelFor(model => model.Roles[i].Checked, Model.Roles[i].Name)
-                </li>
-            }
-        </ul>
-    </fieldset>
     <fieldset class="buttons">
         <p>
             <input type="submit" value="@localizer["Skapa"]" />
