Mindbite.Mox.Images

--- a/src/Mindbite.Mox.Core/Views/Shared/Mox/_Layout.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Mox/_Layout.cshtml
@@ -19,18 +19,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    @await Html.PartialAsync("Mox/LayoutParts/_Head")
     <script>
-        if (!ready) {
-            ready = function (callback) {
-                if (document.readyState === "complete") {
-                    callback();
-                } else {
-                    document.addEventListener("DOMContentLoaded", callback);
-                }
+        function ready(callback) {
+            if (document.readyState === "complete") {
+                callback();
+            } else {
+                document.addEventListener("DOMContentLoaded", callback);
             }
         }
     </script>
+    @await Html.PartialAsync("Mox/LayoutParts/_Head")
     <title>@(ViewData["Title"] ?? currentSelectedMenu?.Title ?? "Mox") - @(Config.Value.SiteTitle)</title>
     <meta name="viewport" content="width=device-width">
     @await Html.PartialAsync("Mox/StaticIncludes/_Files", new { RenderInHead = true }.ToExpando())
