--- a/src/Mindbite.Mox.Core/wwwroot/mox/static/css/base.css
+++ b/src/Mindbite.Mox.Core/wwwroot/mox/static/css/base.css
@@ -84,7 +84,7 @@ h4, h5, h6 { font-size: 1rem; }
 .mox-content article > h1:first-of-type { margin-top: 1.5rem; }
 .mox-content article h1 { margin-bottom: 1rem; }
 
-.mox-button { padding: 6px 10px; border-radius: 3px; background-color: #eee; text-decoration: none; color: #24292e; font-size: 1rem; font-weight: 500; display: inline-block; line-height: 1.2rem; cursor: pointer; }
+.mox-button { border: 0; appearance: none; -webkit-appearance: none; padding: 6px 10px; border-radius: 3px; background-color: #eee; text-decoration: none; color: #24292e; font-size: 1rem; font-weight: 500; display: inline-block; line-height: 1.2rem; cursor: pointer; }
 .mox-button:hover { background-color: #cacaca; }
 
 .mox-button.save { background-color: #efe; }
@@ -95,6 +95,18 @@ h4, h5, h6 { font-size: 1rem; }
 
 .mox-header-apps-button:hover { cursor: pointer; transition: transform .125s ease-out; transform: rotate(-10deg); animation: swag .5s ease-in-out infinite; animation-delay: .125s; }
 @keyframes swag { 0% { transform: rotate(-10deg); } 50% { transform: rotate(10deg); } 100% { transform: rotate(-10deg); } }
+
+
+/**************************************************************
+    ICONS
+***************************************************************/
+.mox-icon { vertical-align: sub; display: inline-block; width: 1em; height: 1.2em; background-size: contain; background-repeat: no-repeat; background-position: center; }
+.mox-icon.arrow-up { background-image: url('/mox/static/svg/pointing-arrow-up.svg'); }
+.mox-icon.arrow-down { background-image: url('/mox/static/svg/pointing-arrow-down.svg'); }
+.mox-icon.arrow-right { background-image: url('/mox/static/svg/pointing-arrow-left.svg'); }
+.mox-icon.arrow-left { background-image: url('/mox/static/svg/pointing-arrow-right.svg'); }
+.mox-icon.trash { background-image: url('/mox/static/svg/x.svg'); }
+
 
 /**************************************************************
     DATATABLE
