--- a/src/Mindbite.Mox.Core/wwwroot/mox/static/css/base.css
+++ b/src/Mindbite.Mox.Core/wwwroot/mox/static/css/base.css
@@ -103,8 +103,8 @@ h4, h5, h6 { font-size: 1rem; }
 .mox-icon { vertical-align: sub; display: inline-block; width: 1em; height: 1.2em; background-size: contain; background-repeat: no-repeat; background-position: center; }
 .mox-icon.arrow-up { background-image: url('/mox/static/svg/pointing-arrow-up.svg'); }
 .mox-icon.arrow-down { background-image: url('/mox/static/svg/pointing-arrow-down.svg'); }
-.mox-icon.arrow-right { background-image: url('/mox/static/svg/pointing-arrow-left.svg'); }
-.mox-icon.arrow-left { background-image: url('/mox/static/svg/pointing-arrow-right.svg'); }
+.mox-icon.arrow-right { background-image: url('/mox/static/svg/pointing-arrow-right.svg'); }
+.mox-icon.arrow-left { background-image: url('/mox/static/svg/pointing-arrow-left.svg'); }
 .mox-icon.trash { background-image: url('/mox/static/svg/x.svg'); }
 
 
@@ -127,7 +127,7 @@ h4, h5, h6 { font-size: 1rem; }
 .mox-datatable tr td.buttons .buttons-list { list-style: none; padding: 0 8px; margin: 0; text-align: right; }
 .mox-datatable tr td.buttons .buttons-list li { display: inline-block; }
 
-.mox-datatable .buttons-list .mox-datatable-button { text-indent: -9999px; text-align: left; width: 2em; height: 2em; background-size: 20px; background-position: center; background-repeat: no-repeat; padding: 0; border-radius: 3px; }
+.mox-datatable .buttons-list .mox-datatable-button { vertical-align: middle; border: 0; appearance: none; -moz-appearance: none; -webkit-appearance: none; display: inline-block; background-color: transparent; min-width: 2em; height: 2em; background-size: 20px; background-position: center; background-repeat: no-repeat; padding: 0; border-radius: 3px; }
 .mox-datatable .buttons-list .mox-datatable-button:hover { background-color: #ccc; }
 
 .mox-datatable .buttons-list .mox-datatable-button.display { background-image: url('/mox/static/images/display.png') }
